src/objects/UM_NumberBlock__c.object
<CustomObject>
    <fields>
        <fullName>Porting_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If number block was ported-in or out, it would be connected to applicable porting process</description>
        <label>Porting Process</label>
        <referenceTo>UM_PortingProcess__c</referenceTo>
        <relationshipLabel>Number Blocks</relationshipLabel>
        <relationshipName>Number_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Number Blocks</relationshipLabel>
        <relationshipName>Number_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_AreaCode__c</fullName>
        <label>Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BillingStatus__c</fullName>
        <label>Billing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Active in Billing</fullName>
                    <default>true</default>
                    <label>Not Active in Billing</label>
                </value>
                <value>
                    <fullName>Active in Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_BlockSize__c</fullName>
        <label>Block Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_CDRIDNumber__c</fullName>
        <label>CDR ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_CallBarringLevel__c</fullName>
        <label>Call Barring Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_CallIdentification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Identification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_EndNumber__c</fullName>
        <label>End Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_MainNumber__c</fullName>
        <label>Main Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_NumberRangeService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Number Range Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Number Blocks</relationshipLabel>
        <relationshipName>Number_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_PortInWishDate__c</fullName>
        <label>Port-In Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_ProductConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Number Blocks</relationshipLabel>
        <relationshipName>Number_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Provider__c</fullName>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_StartNumber__c</fullName>
        <label>Start Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>Porting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Temporary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_VoiceService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voice Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Number Blocks (Voice Service)</relationshipLabel>
        <relationshipName>Number_Blocks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Number Block</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Number Block Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Number Blocks</pluralLabel>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Port_In</fullName>
        <active>true</active>
        <label>Port-In</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>